--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <html>
     <title>Новый год</title>
     <body style="font-family: sans-serif">
-        <header style= "background:Plum"><img src="https://pngicon.ru/file/uploads/novogodnjaja-jolka.png" width="450px" height="550px/"><a href="#12">Дед мороз в разных странах</a> <a href="#15">Новый год</a></header>
+        <header style= "background:Plum"><img src="https://pngicon.ru/file/uploads/novogodnjaja-jolka.png" width="200px" height="300px/"><a href="#12"  style="font-size:18px;">Дед мороз в разных странах</a> <a href="#15" style="font-size:18px">Новый год</a></header>
         <main>
-            <h2 id="15" style="font-size:40px">Новый год</h2>
-            <p style="font-size:20px">Новый год — главный календарный праздник, наступающий в момент перехода с последнего дня текущего года в первый день следующего года.В России на Новый год готовят салаты, блюда, собираются всей семьёй, поздравляют знакомых. Блюда: холодец, салат «сельдь под шубой», салат «мимоза», салат «оливье». Также часто смотрят новогодние фильмы, в основном комедии.</p>
-            <img src="https://amp.calend.ru/cl_resize/mXLX1Qz9M8XNfdbIZXod5pa1sf_LlVhMIhyzdgL_zLs/rs:fill:500:0/g:ce/q:70/aHR0cHM6Ly93d3cuY2FsZW5kLnJ1L2ltZy9BcnRpY2xlcy8yMDE3L05ZLyVEMCU5RCVEMCU5My0lRDAlQTAlRDAlQTQuanBn/">
-            <h2 id="12" style="font-size:40px">Дед мороз в разных странах</h2>
+            <h2 id="15" style="font-size:40px;text-align:center;">Новый год</h2>
+            <p style="font-size:20px"><b>Новый год</b> — главный календарный праздник, наступающий в момент перехода с последнего дня текущего года в первый день следующего года.<br/>В России на Новый год готовят салаты, блюда, собираются всей семьёй, поздравляют знакомых. Блюда: холодец, салат «сельдь под шубой», салат «мимоза», салат «оливье». Также часто смотрят новогодние фильмы, в основном комедии.</p>
+            <img src="https://amp.calend.ru/cl_resize/mXLX1Qz9M8XNfdbIZXod5pa1sf_LlVhMIhyzdgL_zLs/rs:fill:500:0/g:ce/q:70/aHR0cHM6Ly93d3cuY2FsZW5kLnJ1L2ltZy9BcnRpY2xlcy8yMDE3L05ZLyVEMCU5RCVEMCU5My0lRDAlQTAlRDAlQTQuanBn/" width="550px" height="400px/">
+            <img src="https://n1s1.hsmedia.ru/86/7b/b6/867bb6aa7d973fefe0d46d73241a7e4f/728x1092_1_54f3995614c66c34bc89ebfc0cf88ca3@3179x4769_0xac120003_7277193041669730390.jpeg" width="300px" height="400px/">
+            <img src="https://cdn.7days.ru/pic/08e/984797/1462728/86.jpg" width="550px" height="400px/">
+            <h2 id="12" style="font-size:40px;text-align:center;">Дед мороз в разных странах</h2>
             <table style="border:3px solid Red; font-size:20px; background: LightCoral">
                 <tr>
-                    <td>ДЕД МОРОЗ</td>
-                     <td>СТРАНА</td>
+                    <td><b>ДЕД МОРОЗ</b></td>
+                     <td><b>СТРАНА</b></td>
                 </tr>
                 <tr>
                     <td>БАББО НАТАЛЕ</td>
